--- a/app/src/main/res/layout/fragment_text_action_set.xml
+++ b/app/src/main/res/layout/fragment_text_action_set.xml
@@ -20,9 +20,10 @@
         layout="@layout/embark_response"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/base_margin_double"
+        android:layout_marginHorizontal="@dimen/base_margin_double"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/messages" />
+        app:layout_constraintTop_toBottomOf="@id/messages"
+        app:layout_constraintWidth_max="@dimen/embark_chat_bubble_max_width" />
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/input_layout"
