--- a/app/src/main/res/layout/fragment_embark_multi_action.xml
+++ b/app/src/main/res/layout/fragment_embark_multi_action.xml
@@ -19,17 +19,15 @@
         tools:itemCount="1"
         tools:listitem="@layout/embark_message_item" />
 
-    <TextView
-        android:id="@+id/response"
+    <include
+        android:id="@+id/responseContainer"
+        layout="@layout/embark_response"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:alpha="0"
-        android:textAppearance="?textAppearanceSubtitle1"
-        android:theme="@style/ThemeOverlay.Hedvig.Embark.Chat.Self"
-        android:translationY="100dp"
-        android:visibility="gone"
+        android:layout_marginHorizontal="@dimen/base_margin_double"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/messages" />
+        app:layout_constraintTop_toBottomOf="@id/messages"
+        app:layout_constraintWidth_max="@dimen/embark_chat_bubble_max_width" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/componentContainer"
