--- a/app/src/main/res/layout/number_action_set_fragment.xml
+++ b/app/src/main/res/layout/number_action_set_fragment.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".feature.embark.passages.numberaction.NumberActionFragment">
+    tools:context=".feature.embark.passages.numberactionset.NumberActionFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/messages"
@@ -16,20 +16,15 @@
         tools:itemCount="3"
         tools:listitem="@layout/embark_message_item" />
 
-    <TextView
-        android:id="@+id/response"
+    <include
+        android:id="@+id/responseContainer"
+        layout="@layout/embark_response"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/base_margin_double"
-        android:layout_marginEnd="@dimen/base_margin_double"
-        android:layout_marginTop="@dimen/base_margin_half"
-        android:alpha="0"
-        android:textAppearance="?textAppearanceSubtitle1"
-        android:theme="@style/ThemeOverlay.Hedvig.Embark.Chat.Self"
-        android:translationY="100dp"
-        android:visibility="gone"
+        android:layout_marginHorizontal="@dimen/base_margin_double"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/messages" />
+        app:layout_constraintTop_toBottomOf="@id/messages"
+        app:layout_constraintWidth_max="@dimen/embark_chat_bubble_max_width" />
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/input_layout"
