--- a/app/src/main/res/layout/activity_offer.xml
+++ b/app/src/main/res/layout/activity_offer.xml
@@ -19,6 +19,21 @@
         tools:listitem="@layout/offer_header"
         tools:paddingTop="?attr/actionBarSize" />
 
+    <Button
+        android:id="@+id/signButton"
+        style="?attr/materialButtonContainedLargeStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:layout_marginHorizontal="@dimen/base_margin_double"
+        android:layout_marginTop="@dimen/base_margin_quadruple"
+        android:text="@string/OFFER_SIGN_BUTTON"
+        android:visibility="gone"
+        app:icon="@drawable/ic_bank_id"
+        app:iconGravity="textEnd"
+        app:iconPadding="@dimen/base_margin_double"
+        tools:visibility="visible" />
+
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
@@ -30,9 +45,9 @@
             android:id="@+id/offerToolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/white"
             app:menu="@menu/offer_menu"
             app:navigationIcon="@drawable/ic_back"
-            android:background="@color/white"
             tools:layout_height="?attr/actionBarSize">
 
             <ImageView
